Revision history for Perl distribution Win32-Mechanize-NotepadPlusPlus

v0.### 2021-xxx-xx
    - TODO: incorporate the new messages and menu commands thru v8.1.4
    - add notepad->getStatusBar(), which will get the text of one of
      the sections of the status bar (#65)
    - add notepad->getDebugInfo(), which (for new-enough Notepad++) 
      includes the 'Command line' entry from Debug Info (#74)
    - add %WINMSGBOX for use with notepad->messageBox (#73)

v0.007 2021-Apr-03
    - Update Editor object for the Notepad++ 7.9.4 update to
      Scintilla v4.4.6

v0.006001 2021-Mar-07
    - meta fix: turn off the auto-download on smoke tester machines,
      because it was causing fails

v0.006 2021-Mar-06
    - add getSettingsOnCloudPath() with test (#54)
    - add getLineNumberWidthMode(), setLineNumberWidthMode(), and
      the %LINENUMWIDTH enumeration with test (#54 addendeum)
    - test suite bug: with v7.9.1 and newer, replaceTargetText() changes
      the selection/getTargetText() value, so update the readback
      to be version agnostic (#57)
    - documentation error: fox %NPPIDM description in Notepad.pm (#53)
    - meta fix: make test suite pass on cpantesters smoke testers,
      even if smoke tester machine doesn't have Notepad++, or has
      an old, incompatible version (#56)

v0.005 2020-Oct-16
    - replace %ENCODINGKEY with %BUFFERENCODING, because the old hash
      had wrong values that didn't match getEncoding's return values
      (#50)
    - add setEncoding command to call NPPM_SETBUFFERENCODING
      as the logical pair to getEncoding (#51)

v0.004001 2020-Jun-20
    - fix bug in notepad->prompt(), which only used two of the three
      arguments, in wrong order (#47); test suite verifies default
      values for title and default when they aren't used
    - added new examples/pasteSpecial.pl to show how to paste a
      clipboard entry other than CF_TEXT into Notepad++

v0.004 2020-Jun-04