@@ -56,7 +56,7 @@ our %NPPMSG = (
     'NPPM_ACTIVATEDOC'                                           => ((1024 + 1000) + 28),
     'NPPM_ADDTOOLBARICON'                                        => ((1024 + 1000) + 41),
     'NPPM_ADDTOOLBARICON_DEPRECATED'                             => ((1024 + 1000) + 41), 	# v8.0
-	'NPPM_ADDTOOLBARICON_FORDARKMODE'                            => ((1024 + 1000) + 101),	# v8.0
+    'NPPM_ADDTOOLBARICON_FORDARKMODE'                            => ((1024 + 1000) + 101),	# v8.0
     'NPPM_ALLOCATECMDID'                                         => ((1024 + 1000) + 81),
     'NPPM_ALLOCATEMARKER'                                        => ((1024 + 1000) + 82),
     'NPPM_ALLOCATESUPPORTED'                                     => ((1024 + 1000) + 80),
@@ -71,7 +71,7 @@ our %NPPMSG = (
     'NPPM_DMMUPDATEDISPINFO'                                     => ((1024 + 1000) + 32),
     'NPPM_DMMVIEWOTHERTAB'                                       => ((1024 + 1000) + 35),
     'NPPM_DOCSWITCHERDISABLECOLUMN'                              => ((1024 + 1000) + 89),
-	'NPPM_DOCLISTDISABLECOLUMN'                                  => ((1024 + 1000) + 89), 	# v8.1.3
+    'NPPM_DOCLISTDISABLECOLUMN'                                  => ((1024 + 1000) + 89), 	# v8.1.3
     'NPPM_DOOPEN'                                                => ((1024 + 1000) + 77),
     'NPPM_ENCODESCI'                                             => ((1024 + 1000) + 26),
     'NPPM_GETAPPDATAPLUGINSALLOWED'                              => ((1024 + 1000) + 87),
@@ -406,7 +406,7 @@ our %LANGTYPE = (
     'L_TEX'                                                      => 24,
     'L_TEXT'                                                     => 0,
     'L_TXT2TAGS'                                                 => 83,
-	'L_TYPESCRIPT'                                               => 85, # v8.1.4
+    'L_TYPESCRIPT'                                               => 85, # v8.1.4
     'L_USER'                                                     => 15,
     'L_VB'                                                       => 18,
     'L_VERILOG'                                                  => 43,
@@ -941,7 +941,7 @@ our %NPPIDM = (
     'IDM_LANG_TEX'                                               => ((40000 + 6000) + 25),
     'IDM_LANG_TEXT'                                              => ((40000 + 6000) + 16),
     'IDM_LANG_TXT2TAGS'                                          => ((40000 + 6000) + 82),
-	'IDM_LANG_TYPESCRIPT'                                        => ((40000 + 6000) + 84),	# v8.1.4
+    'IDM_LANG_TYPESCRIPT'                                        => ((40000 + 6000) + 84),	# v8.1.4
     'IDM_LANG_USER'                                              => ((40000 + 6000) + 180),
     'IDM_LANG_USER_DLG'                                          => ((40000 + 6000) + 250),
     'IDM_LANG_USER_LIMIT'                                        => ((40000 + 6000) + 210),
@@ -1111,7 +1111,7 @@ our %NPPIDM = (
     'IDM_VIEW_REDUCETABBAR'                                      => ((40000 + 4000) + 5),
     'IDM_VIEW_REFRESHTABAR'                                      => ((40000 + 4000) + 40),
     'IDM_VIEW_SUMMARY'                                           => ((40000 + 4000) + 49),
-	'IDM_VIEW_SWITCHTO_DOCLIST'                                  => ((40000 + 4000) + 109),	# v8.1.3
+    'IDM_VIEW_SWITCHTO_DOCLIST'                                  => ((40000 + 4000) + 109),	# v8.1.3
     'IDM_VIEW_SWITCHTO_FILEBROWSER'                              => ((40000 + 4000) + 107), # v7.9.1
     'IDM_VIEW_SWITCHTO_FUNC_LIST'                                => ((40000 + 4000) + 108), # v7.9.1
     'IDM_VIEW_SWITCHTO_OTHER_VIEW'                               => ((40000 + 4000) + 72),
@@ -1140,7 +1140,7 @@ our %NPPIDM = (
     'IDM_VIEW_TOOLBAR_ENLARGE'                                   => ((40000 + 4000) + 3),
     'IDM_VIEW_TOOLBAR_ENLARGE_SET2'                              => ((40000 + 4000) + 28),	# v8.0
     'IDM_VIEW_TOOLBAR_REDUCE'                                    => ((40000 + 4000) + 2),
-	'IDM_VIEW_TOOLBAR_REDUCE_SET2'                               => ((40000 + 4000) + 27),	# v8.0
+    'IDM_VIEW_TOOLBAR_REDUCE_SET2'                               => ((40000 + 4000) + 27),	# v8.0
     'IDM_VIEW_TOOLBAR_STANDARD'                                  => ((40000 + 4000) + 4),
     'IDM_VIEW_UNFOLD'                                            => ((40000 + 4000) + 60),
     'IDM_VIEW_UNFOLD_1'                                          => (((40000 + 4000) + 60) + 1),
