@@ -1,7 +1,10 @@
 Revision history for Perl distribution Win32-Mechanize-NotepadPlusPlus
 
 v0.### 2021-xxx-xx
-    - TODO: incorporate the new messages and menu commands thru v8.1.4
+    - add notepad->showDocList, notepad->isDocListShown, 
+      and notepad->docListDisableColumn for working with the 
+      Document List panel (previously "Doc Switcher" panel)
+    - incorporate the new messages and menu commands thru v8.1.4 (#80)
     - add notepad->getStatusBar(), which will get the text of one of
       the sections of the status bar (#65)
     - add notepad->getDebugInfo(), which (for new-enough Notepad++) 
